Fix subpost author name alignment problem

--- a/static/subpost.css
+++ b/static/subpost.css
@@ -22,7 +22,6 @@
 }
 
 .subpost_author_name {
-    vertical-align: top;
     color: black;
 }
 
